--- a/Simulación Enero/Perfil_T_Enero.ipynb
+++ b/Simulación Enero/Perfil_T_Enero.ipynb
@@ -26,16 +26,16 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
-        "# Espesor\n",
+        "# Espesor [mm]\n",
         "E = np.array([3.2e-3, 0.2e-3, 0.3e-3, 0.2e-3, 0.1e-3])\n",
         "\n",
-        "# Conductividad\n",
+        "# Conductividad [W/(m*K)]\n",
         "k = np.array([1.8, 0.35, 148.0, 0.35, 0.2])\n",
         "\n",
-        "# Densidad\n",
+        "# Densidad [kg/m**3]\n",
         "p = np.array([3000, 960, 2330, 960, 1200])\n",
         "\n",
-        "# Calor específico\n",
+        "# Calor específico [J/(kg*K)]\n",
         "cp = np.array([500, 2090, 677, 2090, 1250])\n",
         "\n",
         "nrara = 0.145\n",
