--- a/Simulación Enero/Perfil_T_Enero.ipynb
+++ b/Simulación Enero/Perfil_T_Enero.ipynb
@@ -40,13 +40,13 @@
         "\n",
         "nrara = 0.145\n",
         "\n",
-        "# Temperatura ambiente por hora\n",
+        "# Temperatura ambiente por hora [K]\n",
         "T_actual = np.array([14+273.15, 13+273.15, 13+273.15, 12+273.15, 13+273.15, 13+273.15, 15+273.15, 17+273.15, 20+273.15, 22+273.15, 24+273.15, 26+273.15, 28+273.15, 28+273.15, 27+273.15, 27+273.15, 26+273.15, 25+273.15, 23+273.15, 20+273.15, 18+273.15, 16+273.15, 15+273.15, 14+273.15])\n",
         "\n",
         "# Irradiancia por hora\n",
         "G_actual = np.array([0, 0, 0, 0, 0, 0, 0, 67, 311, 566, 792, 963, 1065, 1081, 1029, 897, 704, 460, 204, 20, 0, 0, 0, 0])\n",
         "\n",
-        "# Velocidad del aire por hora\n",
+        "# Velocidad del aire por hora [m/s]\n",
         "vel_aire_actual = np.array([1,1,1,1,2,2,1,1,3,5,7,8,9,11,13,12,10,6,3,2,2,1,1,1])\n",
         "\n",
         "# Parámetros radiativos\n",
@@ -56,7 +56,7 @@
         "a_celda = 0.9\n",
         "tau_vid = 0.91\n",
         "\n",
-        "# Temperatura inicial del panel\n",
+        "# Temperatura inicial del panel [K]\n",
         "T_0 = 14 + 273.15\n",
         "\n",
         "# Difusividades\n",
