--- a/Simulación Enero/Perfil_T_Enero.ipynb
+++ b/Simulación Enero/Perfil_T_Enero.ipynb
@@ -43,7 +43,7 @@
         "# Temperatura ambiente por hora [K]\n",
         "T_actual = np.array([14+273.15, 13+273.15, 13+273.15, 12+273.15, 13+273.15, 13+273.15, 15+273.15, 17+273.15, 20+273.15, 22+273.15, 24+273.15, 26+273.15, 28+273.15, 28+273.15, 27+273.15, 27+273.15, 26+273.15, 25+273.15, 23+273.15, 20+273.15, 18+273.15, 16+273.15, 15+273.15, 14+273.15])\n",
         "\n",
-        "# Irradiancia por hora\n",
+        "# Irradiancia por hora [W/m**2]\n",
         "G_actual = np.array([0, 0, 0, 0, 0, 0, 0, 67, 311, 566, 792, 963, 1065, 1081, 1029, 897, 704, 460, 204, 20, 0, 0, 0, 0])\n",
         "\n",
         "# Velocidad del aire por hora [m/s]\n",
