--- a/Simulación Enero/Perfil_T_Enero.ipynb
+++ b/Simulación Enero/Perfil_T_Enero.ipynb
@@ -138,13 +138,13 @@
         "        C += 1\n",
         "    return T_\n",
         "\n",
-        "L1 = 1.663  # largo\n",
-        "L2 = 0.998  # ancho\n",
+        "L1 = 1.663  # largo [m]\n",
+        "L2 = 0.998  # ancho [m]\n",
         "\n",
         "k_aire = 0.0262\n",
         "nu_aire = 15.52e-6\n",
         "Pr = 0.707\n",
-        "g = 9.81\n",
+        "g = 9.81 # [m/s**2]\n",
         "\n",
         "def calcular_h_conveccion(T_superficie, T_aire_K, Velocidad_Viento, Cara_superior=True):\n",
         "    beta = 1 / T_aire_K\n",
