--- a/Simulación Enero/Perfil_T_Enero.ipynb
+++ b/Simulación Enero/Perfil_T_Enero.ipynb
@@ -26,7 +26,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
-        "# Espesor [mm]\n",
+        "# Espesor [m]\n",
         "E = np.array([3.2e-3, 0.2e-3, 0.3e-3, 0.2e-3, 0.1e-3])\n",
         "\n",
         "# Conductividad [W/(m*K)]\n",
