--- a/Simulación Julio/Perfil_T_Julio.ipynb
+++ b/Simulación Julio/Perfil_T_Julio.ipynb
@@ -26,27 +26,28 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
-        "# Espesor\n",
+        "# Espesor [m]\n",
         "E = np.array([3.2e-3, 0.2e-3, 0.3e-3, 0.2e-3, 0.1e-3])\n",
         "\n",
-        "# Conductividad\n",
+        "# Conductividad [W/(m*k)]\n",
         "k = np.array([1.8, 0.35, 148.0, 0.35, 0.2])\n",
         "\n",
-        "# Densidad\n",
+        "# Densidad [kg/m**3]\n",
         "p = np.array([3000, 960, 2330, 960, 1200])\n",
         "\n",
-        "# Calor específico\n",
+        "# Calor específico [J/(kg*K)]\n",
         "cp = np.array([500, 2090, 677, 2090, 1250])\n",
         "\n",
+        "# Eficiencia\n",
         "nrara = 0.145\n",
         "\n",
-        "# Temperatura ambiente por hora\n",
+        "# Temperatura ambiente por hora [K]\n",
         "T_actual = np.array([10,10,10,10,10,10,11,12,14,16,18,20,22,24,24,23,21,18,16,14,13,12,11,11])+273.15\n",
         "\n",
-        "# Irradiancia por hora\n",
+        "# Irradiancia por hora [W/m**2]\n",
         "G_actual = np.array([0,0,0,0,0,0,0,0,207,469,689,826,901,904,861,752,567,336,5,0,0,0,0,0])\n",
         "\n",
-        "# Velocidad del aire por hora\n",
+        "# Velocidad del aire por hora [m/s]\n",
         "vel_aire_actual = np.array([2,2,2,2,2,2,2,2,2,2,3,4,6,6,7,6,4,2,1,2,2,2,2,2])\n",
         "\n",
         "# Parámetros radiativos\n",
@@ -56,7 +57,7 @@
         "a_celda = 0.9\n",
         "tau_vid = 0.91\n",
         "\n",
-        "# Temperatura inicial del panel\n",
+        "# Temperatura inicial del panel [K]\n",
         "T_0 = 14 + 273.15\n",
         "\n",
         "# Difusividades\n",
@@ -135,13 +136,13 @@
         "        C += 1\n",
         "    return T_\n",
         "\n",
-        "L1 = 1.663  # largo\n",
-        "L2 = 0.998  # ancho\n",
+        "L1 = 1.663  # largo [m]\n",
+        "L2 = 0.998  # ancho [m]\n",
         "\n",
         "k_aire = 0.0262\n",
         "nu_aire = 15.52e-6\n",
         "Pr = 0.707\n",
-        "g = 9.81\n",
+        "g = 9.81 # [m/s**2]\n",
         "\n",
         "def calcular_h_conveccion(T_superficie, T_aire_K, Velocidad_Viento, Cara_superior=True):\n",
         "    beta = 1 / T_aire_K\n",
