--- a/Simulación Enero/Perfil_T_Enero.ipynb
+++ b/Simulación Enero/Perfil_T_Enero.ipynb
@@ -38,6 +38,7 @@
         "# Calor específico [J/(kg*K)]\n",
         "cp = np.array([500, 2090, 677, 2090, 1250])\n",
         "\n",
+        "# Eficiencia\n",
         "nrara = 0.145\n",
         "\n",
         "# Temperatura ambiente por hora [K]\n",
