--- a/Simulación Enero/Perfil_T_Enero.ipynb
+++ b/Simulación Enero/Perfil_T_Enero.ipynb
@@ -60,7 +60,7 @@
         "# Temperatura inicial del panel [K]\n",
         "T_0 = 14 + 273.15\n",
         "\n",
-        "# Difusividades\n",
+        "# Difusividades [m/s]\n",
         "alpha = k / (p * cp)\n",
         "\n",
         "# Posiciones de interfaces\n",
@@ -148,7 +148,7 @@
         "g = 9.81 # [m/s**2]\n",
         "\n",
         "def calcular_h_conveccion(T_superficie, T_aire_K, Velocidad_Viento, Cara_superior=True):\n",
-        "    beta = 1 / T_aire_K\n",
+        "    beta = 1 / T_aire_K # [1/°C]\n",
         "    dT = T_superficie - T_aire_K\n",
         "\n",
         "    # Convección natural\n",
