--- a/Simulación Julio/Perfil_T_Julio.ipynb
+++ b/Simulación Julio/Perfil_T_Julio.ipynb
@@ -61,7 +61,7 @@
         "T_0 = 14 + 273.15\n",
         "\n",
         "# Difusividades\n",
-        "alpha = k / (p * cp)\n",
+        "alpha = k / (p * cp) # [m/s]\n",
         "\n",
         "# Posiciones de interfaces\n",
         "interface = np.concatenate([[0.0], np.cumsum(E)])\n",
@@ -145,7 +145,7 @@
         "g = 9.81 # [m/s**2]\n",
         "\n",
         "def calcular_h_conveccion(T_superficie, T_aire_K, Velocidad_Viento, Cara_superior=True):\n",
-        "    beta = 1 / T_aire_K\n",
+        "    beta = 1 / T_aire_K #[1/°C]\n",
         "    dT = T_superficie - T_aire_K\n",
         "\n",
         "    # Convección natural\n",
